RESOLVED FIXED143278
[WK2][iOS] We should prevent NetworkProcess suspension while it has pending SQL transactions
https://bugs.webkit.org/show_bug.cgi?id=143278
Summary [WK2][iOS] We should prevent NetworkProcess suspension while it has pending S...
Chris Dumez
Reported 2015-03-31 14:59:58 PDT
We should prevent NetworkProcess suspension while it has pending SQL transactions, similarly to what we already do for WebProcesses. Radar: <rdar://problem/20180799>
Attachments
Patch (27.50 KB, patch)
2015-03-31 15:26 PDT, Chris Dumez
no flags
Patch (29.86 KB, patch)
2015-04-02 14:34 PDT, Chris Dumez
no flags
Patch (29.82 KB, patch)
2015-04-03 10:07 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-03-31 15:26:33 PDT
WebKit Commit Bot
Comment 2 2015-03-31 15:29:35 PDT
Attachment 249861 [details] did not pass style-queue: ERROR: Source/WebKit2/Shared/WebSQLiteDatabaseTracker.cpp:48: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3 2015-04-02 14:34:19 PDT
Chris Dumez
Comment 4 2015-04-02 14:34:52 PDT
No longer using Supplements, as per Anders' feedback via IRC.
WebKit Commit Bot
Comment 5 2015-04-02 14:36:42 PDT
Attachment 250009 [details] did not pass style-queue: ERROR: Source/WebKit2/Shared/WebSQLiteDatabaseTracker.cpp:43: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 6 2015-04-03 09:58:47 PDT
Comment on attachment 250009 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=250009&action=review Do you really need to make the trackers be unique pointers? Can't they be plain members of the WebProcess and NetworkProcess classes? > Source/WebKit2/WebProcess/WebProcess.h:382 > + std::unique_ptr<WebSQLiteDatabaseTracker> m_webSQLiteDatabaseManager; Should be DatabaseTracker, not DatabaseManager.
Chris Dumez
Comment 7 2015-04-03 10:07:05 PDT
WebKit Commit Bot
Comment 8 2015-04-03 10:09:06 PDT
Attachment 250086 [details] did not pass style-queue: ERROR: Source/WebKit2/Shared/WebSQLiteDatabaseTracker.cpp:43: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 9 2015-04-03 10:55:38 PDT
Comment on attachment 250086 [details] Patch Clearing flags on attachment: 250086 Committed r182323: <http://trac.webkit.org/changeset/182323>
WebKit Commit Bot
Comment 10 2015-04-03 10:55:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.